# DigitalDriveShaft

./: .coveragerc  .gitignore  .zenodo.json  README.md  freier_Bereich.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
Exceltools/: ToKoKo-SunShaft_Ueberschlagsrechnungen_v20_HTS40_Static-ultimate_LagerB_kurz.xlsm
docs/: pep.drawio.html
examples/: README.md  dong.py  freq.py  material_polar_plots.py  mp.py  opti_analysis.py  opti_sim.py  plate_hole.py  reference_shaft_45-45-4545.op2  reference_shaft_sim1-solution_1.diag  sim.py  strength.py  stress_layer_plot.py  tensile_test.py  verify_mapdl.py
examples/optimization/analytic/: opti_analysis.py
examples/optimization/simulation/: data.py  opti_sim.py  plot_shaft.py  post_all.py  post_best_table.py  post_db.py  post_driveshaft.py  (+5 more)
src/DigitalDriveShaft/: LaminateStrainStress.tex  PlyTablePlyBot.tex  PlyTablePlyBot.xlsx  PlyTablePlyTop.tex  PlyTablePlyTop.xlsx  README.md  Wellenauslegung.py  Wellenauslegung_v01.py  driveshaft.py  freier_Bereich.py  freier_Bereich_v01.py  load.py  stackup.py  test1_Laminate1_StackLayup.tex
tests/: README.md  test_load.py
tests/analysis/: test_buckling.py  test_dynamic.py  test_failures.py  test_relevant.py  test_rpm.py  test_static_stress.py  test_strength.py
tests/basic/: test_loading.py  test_stackup.py
tests/cylindrical/: test_driveshaft.py
tests/sim/: NX-Results.docx  __init__.py  area_cylindical_test.py  shell_cylindical_test.py  shell_plot_test.py  shell_result_test.py  test_geometry.py  test_shell.py  test_stackup.py  ~$-Results.docx
(+113 files in other folders)
