[metadata]
name = DigitalDriveShaft
version = attr: DigitalDriveShaft.__version__
url = https://github.com/Modular-Design/DigitalDriveShaft
project_urls =
    Source Code = https://github.com/Modular-Design/DigitalDriveShaft
    Issue Tracker = https://github.com/Modular-Design/DigitalDriveShaft/issues/

license = BSD-3-Clause
author = WILLI Zschiebsch


[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
#console_scripts =
#    DigitalDriveShaft = DigitalDriveShaft.scripts.DigitalDriveShaft:DigitalDriveShaft

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    DigitalDriveShaft
    tests

[coverage:paths]
source =
    src